--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "clipboard-copy": "^4.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
